# turi

./: .gitignore  Cargo.toml  README.md  log4rs.yaml  rustfmt.toml
benches/: scrolling.rs
examples/: dialog_view.rs  layered_view.rs  lorem.rs  select_view.rs  shared.rs  simple.rs  text_view.rs  wgpu.rs
res/: simple.css
src/: attribute.rs  backend.rs  builder.rs  converters.rs  css.rs  element_view.rs  event.rs  event_filter.rs  event_result.rs  events.rs  executor.rs  lib.rs  macros.rs  model.rs  modifires.rs  never.rs  orientation.rs  printer.rs  rect.rs  state.rs  style.rs  update_result.rs  util.rs  vec2.rs  view.rs  view_proxys.rs  view_wrappers.rs  views.rs
src/backend/: buffer.rs  crossterm.rs  dummy.rs  sliced.rs  test.rs  wgpu.rs
src/css/: auto.rs  calc.rs  color.rs  combine.rs  css_val.rs  font_style.rs  property.rs  rect.rs  rule.rs  size.rs  style_sheet.rs
src/event/: crossterm.rs  winit.rs
src/views/: button_view.rs  dialog.rs  dialog_view.rs  edit_view.rs  fps_view.rs  layered_view.rs  linear_view.rs  paragraph_view.rs  select_view.rs  text_view.rs
tests/: scroll_ui.rs
