[package]
name = "turi"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[features]
default = ["crossterm-backend"]
crossterm-backend = ["crossterm"]
test-backend = []
bench = []

[dependencies]
unicode-width = "0.1.7"
ansi_term = { version = "0.12.1" }
bumpalo = { version = "3.2.0", features = ["collections"] }
simplecss = "0.2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"

[dependencies.crossterm]
version = "0.16"
optional = true

[dev-dependencies]
pretty_assertions = "0.6.1"
log = "0.4.8"
simplelog = "0.7.4"
